Revision history for {{$dist->name}}

{{$NEXT}}

2.01      2014-06-19 12:22:35 -0400
  - fixed regression involving archive_write_finish and archive_write_free
    on older versions of libarchive
  - remove workarounds for broken Alien::Base stuff
  - require Alien::Libarchive 0.20

2.00      2014-06-18 10:14:24 -0400
  - this version serves primarily to bring the API in line with
    Archive::Ar 2.00
  - added methods
    - set_opt
    - get_opt
    - clear
    - get_data
    - chmod
    - chown
    - type
    - rename
    - extract
    - extract_filename
    - error
    - contains_file
  - deprecated methods
    - DEBUG
    - set_output_format_bsd
    - set_output_format_svr4
  - Archive::Ar::Libarchive now optionally exports type constants
    COMMON (referred to as "svr4" previous versions), GNU and BSD
  - type detection: after reading an archive the type method
    will tell you the type of ar file.
  - output format defaults to input format
  - read and write metods will now accept a file handle or IO::Handle
    object
  - GNU format is now supported for output

0.12      2014-06-10 10:02:28 -0400
  - borrow new test t/50empty.t from Archive::Ar
  - Alien::Libarchive 0.19 compatability

0.11      2014-02-14 12:05:42 -0500
  - use archive_read_next_header if archive_read_next_header2 is not available
    (should help with older versions of libarchive)

0.10      2014-02-12 07:35:15 -0500
  - support for libarchive 2.5.x (MidnightBSD 0.3)

0.09      2014-02-03 17:08:18 -0500
  - more robust check for static libarchive

0.08      2014-02-02 04:35:04 -0500
  - only link static (libarchive.a)
    if Alien::Libarchive was built from source

0.07      2014-01-29 19:32:39 -0500
  - link against libarchive.a
    instead of   libarchive.so

0.06      2014-01-29 09:15:42 -0500
  - remove accidental debug diagnostic

0.05      2013-12-31 12:31:50 -0500
  - support for MS Visual Studio C++ on MSWin32

0.04      2013-12-24 17:05:15 -0500
  - Fix method links
